--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -11,6 +11,17 @@ body { padding-top: 70px;!important; }
    background-color: #D9462F;
 }
 
-.panel, .label, .btn{
+.panel, .label, .btn, .well{
 	border-radius: 0;
+}
+
+.label a{
+	color:white;
+}
+.label a:hover{
+	color:#ccc;
+}
+
+input[type=checkbox]{
+
 }
